[metadata]
name = pycellframe
version = 1.0.6
author = Luka Sosiashvili
author_email = luksosiashvili@gmail.com
description = Useful tool for inserting DataFrames into the Excel sheet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LUKASANUKVARI/pycellframe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    openpyxl
