[metadata]
name = pyxcelframe
version = 1.1
author = Luka Sosiashvili
author_email = luksosiashvili@gmail.com
description = Useful tool for more specialized interactions between the Pandas DataFrames and the Excel worksheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukasanukvari/pyxcelframe
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    openpyxl
